syntax = "proto3";

package GoShare;

option go_package = "./api/grpc/pb";

message ShareResponse {
  string Message = 1;
  string Error = 2;
}

message ShareInitResponse {
  int64 ChunkSize = 1;
  string Message = 2;
  string Error = 3;
}

message ShareInitRequest {
  string Identifier = 1;
  string FileName = 2;
  int64 FileSize = 3;
}

message ShareRequest {
  string Identifier = 1;
  int64 SequenceNumber = 2;
  bytes Data = 3;
}

message ReceiveRequest {
  string Identifier = 1;
  int32 Semaphore = 2;
}

message ReceiveInitResponse {
  string FileName = 1;
  int64 FileSize = 2;
}

message ReceiveResponse {
  int64 SequenceNumber = 1;
  bytes Data = 2;
}

message PingMsg {
  bool Ping = 1;
}

message PongMsg {
  bool Pong = 1;
}
service GoShare {
  rpc Ping(PingMsg) returns (PongMsg){};
  rpc ShareInit(ShareInitRequest) returns (ShareInitResponse){};
  rpc Share(stream ShareRequest) returns (stream ShareResponse){};
  rpc ReceiveInit(ReceiveRequest) returns (ReceiveInitResponse){};
  rpc Receive(ReceiveRequest) returns (stream ReceiveResponse){};
}